--- a/index.html
+++ b/index.html
@@ -240,7 +240,6 @@
                         <img src="images/true-beauty/bracelets.jpg" alt="" />
                         <img src="images/true-beauty/watch.jpg" alt="" />
                         <img src="images/true-beauty/pendants.jpg" alt="" />
-
                     </div>
                 </div>
                 <div class="photos">
@@ -412,45 +411,82 @@
             </div>
         </section>
         <footer>
-            <div>   
+            <div>
                 <div class="useful-links">
                     <h2>Полезные ссылки</h2>
-                    <hr>
+                    <hr />
                     <ul>
-                    <li><a href="#Доставка">Доставка</a> </li>
-                    <li><a href="#Оплата">Оплата</a>  </li>
-                    <li><a href="#Акции">Акции</a> </li>
-                    <li><a href="#Политика конфиденциальности">Политика конфиденциальности</a> </li>
-                </ul>
+                        <li><a href="#Доставка">Доставка</a></li>
+                        <li><a href="#Оплата">Оплата</a></li>
+                        <li><a href="#Акции">Акции</a></li>
+                        <li>
+                            <a href="#Политика конфиденциальности"
+                                >Политика конфиденциальности</a
+                            >
+                        </li>
+                    </ul>
                 </div>
                 <div class="payment">
                     <h2>оплата</h2>
-                    <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper justo, nec, pellentesque.</p>
-                    <div><img src="images/footer/Rectangle 13.svg" alt=""> <img src="images/footer/Rectangle 14.svg" alt=""></div>
+                    <hr />
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ullamcorper justo, nec, pellentesque.
+                    </p>
+                    <div>
+                        <img src="images/footer/Rectangle 13.svg" alt="" />
+                        <img src="images/footer/Rectangle 14.svg" alt="" />
+                    </div>
                 </div>
                 <address>
                     <h2>контакты</h2>
-                    <hr>
-                    <a href="#phone.svg" class="phone1"> <img src="images/footer/phone.svg" alt=""> <span>8 (812) 234-56-55</span> </a>
-                    
-                    <a href="#phone.svg"> <img src="images/footer/phone.svg" alt=""> <span>8 (812) 234-56-55</span></a>
-                    <a href="#ojjo.ruaddress"> <img src="images/footer/entypo_mail.svg" alt=""> <span>ojjo@ojjo.ruaddress</span>  </a>
+                    <hr />
+                    <a href="#phone.svg" class="phone1">
+                        <img src="images/footer/phone.svg" alt="" />
+                        <span>8 (812) 234-56-55</span>
+                    </a>
+
+                    <a href="#phone.svg">
+                        <img src="images/footer/phone.svg" alt="" />
+                        <span>8 (812) 234-56-55</span></a
+                    >
+                    <a href="#ojjo.ruaddress">
+                        <img src="images/footer/entypo_mail.svg" alt="" />
+                        <span>ojjo@ojjo.ruaddress</span>
+                    </a>
                 </address>
                 <div class="social-networks">
                     <h2>социальные сети</h2>
-                    <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ullamcorper justo, nec, pellentesque.</p>
-                    <div><img src="images/footer/social network/bx_bxl-facebook.svg" alt="">
-                        <img src="images/footer/social network/bx_bxl-telegram.svg" alt="">
-                        <img src="images/footer/social network/carbon_logo-youtube.svg" alt="">
-                        <img src="images/footer/social network/entypo-social_vk.svg" alt="">
-                        <img src="images/footer/social network/simple-icons_etsy.svg" alt="">
+                    <hr />
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ullamcorper justo, nec, pellentesque.
+                    </p>
+                    <div>
+                        <img
+                            src="images/footer/social network/bx_bxl-facebook.svg"
+                            alt=""
+                        />
+                        <img
+                            src="images/footer/social network/bx_bxl-telegram.svg"
+                            alt=""
+                        />
+                        <img
+                            src="images/footer/social network/carbon_logo-youtube.svg"
+                            alt=""
+                        />
+                        <img
+                            src="images/footer/social network/entypo-social_vk.svg"
+                            alt=""
+                        />
+                        <img
+                            src="images/footer/social network/simple-icons_etsy.svg"
+                            alt=""
+                        />
                     </div>
                 </div>
-
             </div>
-            <hr class="hr">
+            <hr class="hr" />
             <div class="inner-footer">
                 <p>(c) 2020 OJJO jewelry</p>
                 <p>Договор публичной офферты</p>
@@ -459,8 +495,7 @@
             </div>
         </footer>
         <script src="js/script.js"></script>
-        
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     </body>
 </html>
