--- a/index.html
+++ b/index.html
@@ -315,18 +315,34 @@
                     <h2>Лучшие советы по подбору дорогих подарков</h2>
                 </div>
                 <div class="photos">
-                    <img
-                        src="images/expensive-presents/Rectangle 5.jpg"
-                        alt=""
-                    />
-                    <img
-                        src="images/expensive-presents/Rectangle 5 (1).jpg"
-                        alt=""
-                    />
-                    <img
-                        src="images/expensive-presents/Rectangle 5 (2).jpg"
-                        alt=""
-                    />
+                    <div class="container">
+                        <img
+                            src="images/expensive-presents/Rectangle 5.jpg"
+                            alt=""
+                        />
+                        <div class="text-on-image">
+                            Как выбрать часы для своей будущей жены
+                        </div>
+                    </div>
+                    <div class="container">
+                        <img
+                            src="images/expensive-presents/Rectangle 5 (1).jpg"
+                            alt=""
+                        />
+                        <div class="text-on-image">
+                            Запонки для мужа: 7 ключевых правил покупки
+                            аксессуара
+                        </div>
+                    </div>
+                    <div class="container">
+                        <img
+                            src="images/expensive-presents/Rectangle 5 (2).jpg"
+                            alt=""
+                        />
+                        <div class="text-on-image">
+                            Как выбрать обручальные кольца молодоженам
+                        </div>
+                    </div>
                 </div>
                 <a href="#читать наш блог">читать наш блог</a>
             </div>
